--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -10,27 +10,29 @@
     tools:context="com.abc.app.airbnbcityapp.ImageActivity">
     <ImageView
         android:id="@+id/iv_photo"
-        android:layout_width="50dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
         />
     <TextView
         android:id="@+id/tv_addr"
-        android:paddingLeft="10dp"
+        android:paddingLeft="40dp"
+        android:textColor="#ecb8b9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tv_addr"
+        android:layout_toRightOf="@id/tv_price"
         android:textSize="15dp"
         android:textStyle="bold"
         />
     <TextView
         android:id="@+id/tv_price"
-        android:paddingLeft="10dp"
+        android:paddingLeft="20dp"
+        android:textColor="#ecb8b9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tv_price"
-        android:textSize="15dp"
+        android:layout_toRightOf="@id/iv_photo"
+        android:textSize="20dp"
         android:textStyle="bold"
         />
 </RelativeLayout>
