--- a/app/src/main/res/layout/activity_hosting.xml
+++ b/app/src/main/res/layout/activity_hosting.xml
@@ -143,7 +143,7 @@
         android:text="호스팅등록"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
-        android:id="@+id/bt_join"
+        android:id="@+id/bt_hosting"
         />
     <Button
         android:layout_width="match_parent"
