--- a/app/src/main/res/layout/activity_hosting.xml
+++ b/app/src/main/res/layout/activity_hosting.xml
@@ -2,13 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#02a79a">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="호스팅"
+        android:text="호스트가 되어 친구를 늘려보세요."
         android:gravity="center_horizontal"
-        android:textSize="30dp"/>
+        android:background="#454242"
+        android:textColor="#ffffff"
+        android:textSize="20dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +20,8 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="숙소 유형:"/>
+            android:text="숙소 유형:"
+            android:textColor="#ffffff"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,6 +35,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:textColor="#ffffff"
             android:text="침실수:"/>
         <EditText
             android:layout_width="match_parent"
@@ -45,6 +50,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:textColor="#ffffff"
             android:text="가능인원:"/>
         <EditText
             android:layout_width="match_parent"
@@ -59,6 +65,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:textColor="#ffffff"
             android:text="화장실수:"/>
         <EditText
             android:layout_width="match_parent"
@@ -73,7 +80,8 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="설비:"/>
+            android:textColor="#ffffff"
+            android:text="설 비:"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,7 +95,8 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="주소:"/>
+            android:textColor="#ffffff"
+            android:text="주 소:"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,7 +110,8 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="가격:"/>
+            android:textColor="#ffffff"
+            android:text="가 격:"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,6 +125,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:textColor="#ffffff"
             android:text="침대수:"/>
         <EditText
             android:layout_width="match_parent"
@@ -126,10 +137,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="간단한설명:"/>
+            android:textColor="#ffffff"
+            android:text="간단한 집설명:"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -144,6 +156,8 @@
         android:textSize="20dp"
         android:layout_marginTop="20dp"
         android:id="@+id/bt_join"
+        android:background="#454242"
+        android:textColor="#ffffff"
         />
     <Button
         android:layout_width="match_parent"
@@ -151,6 +165,8 @@
         android:text="취소"
         android:textSize="20dp"
         android:id="@+id/bt_reset"
+        android:background="#454242"
+        android:textColor="#ffffff"
         />
 
 </LinearLayout>
