--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.abc.app.airbnbcityapp.ImageActivity">
+    tools:context="com.abc.app.airbnbcityapp.ImageActivity"
+    android:background="#02a79a">
     <ImageView
         android:id="@+id/iv_photo"
         android:layout_width="100dp"
